--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -72,7 +72,15 @@ uniform vec2 resolution;
 uniform bool debugCamera;
 uniform vec3 cameraPos;
 uniform vec3 cameraDir;
+
+// uniform float kadoScale;
+#else
+
+// float kadoScale;
+
 #endif
+
+float kadoScale;
 
 // consts
 const float INF = 1e+10;
@@ -216,15 +224,6 @@ float sdBox( vec3 p, vec3 b ) {
   return min(max(d.x,max(d.y,d.z)),0.0) + length(max(d,0.0));
 }
 
-float dSphere(vec3 p, float r) {
-	return length(p) - r;
-}
-
-float dBar( vec2 p, float interval, float width) {
-	return length( max( abs( opRep( p, interval ) ) - width, 0.0 ) );
-}
-
-
 #define META_SCENE_END_TIME (32.0)
 #define UFO_SCENE_END_TIME (117.0)
 #define SNOW_SCENE_END_TIME (182.0)
@@ -234,7 +233,6 @@ float minRadius2 = 0.5;
 float fixedRadius2 = 1.0;
 float foldingLimit = 1.0;
 #define Iterations 8
-uniform float kadoScale;
 
 void sphereFold(inout vec3 z, inout float dz) {
 	float r2 = dot(z,z);
@@ -276,15 +274,6 @@ float random(in vec2 p) {
 // https://www.shadertoy.com/view/MsXfzB
 float sdFloor(in vec3 p) {
     return p.y;
-}
-
-float sdBuildings_(in vec3 p) {
-    vec3 pp = mod(p, 1.) - .5;
-    float height = random(p.xz - mod(p.xz, 1.)) *3.;
-    float nearness = max(floor(p.z) - time - 2., 0.3);
-    nearness = pow(nearness, .3);
-    pp.y = p.y * 0.4 * nearness - height * 0.1;
-    return length(max(abs(pp) - .25, .0));
 }
 
 float sdBuildings(in vec3 p) {
@@ -330,7 +319,7 @@ void intersectScene(inout Intersection intersection, inout Ray ray ) {
 	intersection.distance = 0.0;
 	vec3 p = ray.origin;
 
-	for (float i = 0.0; i < 128.0; i++) {
+	for (float i = 0.0; i < 300.0; i++) {
 		d = dScene(p);
 		intersection.distance += d;
 		p = ray.origin + intersection.distance * ray.direction;
@@ -342,7 +331,6 @@ void intersectScene(inout Intersection intersection, inout Ray ray ) {
 		intersection.hit = true;
 		intersection.position = p;
 		intersection.normal = calcNormal(p, dScene);
-		//intersection.metalness = 0.7;
 
 		if (abs(dMbox(p)) < EPS) {
 			intersection.material = METAL_MATERIAL;
@@ -385,14 +373,14 @@ float dBox(vec2 p, vec2 b) {
 }
 
 vec4 buildingsWallTexture(vec2 p) {
-	vec4 concreteBase = vec4(0.7, 0.7, 0.7, 0.0);
-	vec4 glassBase    = vec4(0.7, 0.7, 1.0, 0.5);
+	vec4 concreteBase = vec4(0.7, 0.7, 1.0, 0.0);
+	vec4 glassBase    = vec4(0.2, 0.2, 0.2, 0.7);
 	float d = dBox(opRep(p, 0.02), vec2(0.008, 0.005));
 	return d < 0.0 ? glassBase : concreteBase;
 }
 
 vec4 buildingsRoofTexture(vec2 p) {
-	vec4 concreteBase = vec4(0.5, 0.5, 0.5, 0.0);
+	vec4 concreteBase = vec4(0.8, 0.8, 1.0, 0.0);
 	return concreteBase;
 }
 
@@ -518,6 +506,8 @@ void main(void) {
 	camera.up = vec3(0.0, 1.0, 0.0);// y-up
 	camera.zoom = 1.3;
 	Ray ray = cameraShootRay(camera, uv);
+
+	kadoScale = 2.0 + cos(time * 0.1);
 
 	vec3 color = vec3(0.0);
 	float reflection = 1.0;
