--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -278,10 +278,14 @@ float sdFloor(in vec3 p) {
 
 float sdBuildings(in vec3 p) {
 	float interval = 0.5;
-	vec3 q = p;
-	q.xz = opRep(q.xz, interval);
-	float height = 1.0 + random(p.xz - mod(p.xz, interval));
-	return sdBox(q, vec3(0.05, height, 0.05));
+	vec2 seed = p.xz - mod(p.xz, interval);
+	float height = 1.0 + random(seed);
+	float width = 0.03 + 0.02 * random(seed + 1.0);
+	float depth = 0.03 + 0.02 * random(seed + 2.0);
+
+	vec3 p1 = p;
+	p1.xz = opRep(p1.xz, interval);
+	return sdBox(p1, vec3(width, height, depth));
 }
 
 float sdBuildingsQuad(in vec3 p) {
