--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -134,7 +134,6 @@ struct Intersection {
 
 	int material;
 	vec3 color;
-	//float metalness;
 	float reflectance;
 };
 
@@ -521,9 +520,7 @@ void main(void) {
 		calcRadiance(intersection, ray, bounce);
 
 		color += reflection * intersection.color;
-		if (!intersection.hit /*|| intersection.material != METAL_MATERIAL*/) break;
-
-		//reflection *= (intersection.metalness * 0.7);
+		if (!intersection.hit) break;
 		reflection *= intersection.reflectance;
 		ray.origin = intersection.position + intersection.normal * OFFSET;
 		ray.direction = normalize(reflect(ray.direction, intersection.normal));
