Rename sor_lake2 cubemaps

--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -442,7 +442,7 @@ void main(void) {
 				camera.lookAt( new THREE.Vector3( 0.0, 0.0, 0.0 ) );
 
 				var cubeTextureLoader = new THREE.CubeTextureLoader();
-				textureCube = createTextureCube( cubeTextureLoader, "textures/cube/Bridge2/", "jpg" );
+				textureCube = createTextureCube( cubeTextureLoader, "textures/cube/sor_lake2/", "jpg" );
 
 				geometry = new THREE.PlaneBufferGeometry( 2.0, 2.0 );
 				material = new THREE.RawShaderMaterial( {
