--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -62,7 +62,10 @@ precision highp float;
 uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
+
 uniform samplerCube textureCube;
+uniform sampler2D groundHeight;
+uniform sampler2D groundNormal;
 
 uniform bool debugCamera;
 uniform vec3 cameraPos;
@@ -238,7 +241,7 @@ vec3 hsv2rgb(vec3 c) {
 #define calcNormal(p, dFunc) normalize(vec2(EPS_N, -EPS_N).xyy * dFunc(p + vec2(EPS_N, -EPS_N).xyy) + vec2(EPS_N, -EPS_N).yyx * dFunc(p + vec2(EPS_N, -EPS_N).yyx ) + vec2(EPS_N, -EPS_N).yxy * dFunc(p + vec2(EPS_N, -EPS_N).yxy) + vec2(EPS_N, -EPS_N).xxx * dFunc(p + vec2(EPS_N, -EPS_N).xxx))
 
 float sdGround(in vec3 p) {
-    return p.y + 4.0;
+    return p.y - 0.3 * texture2D(groundHeight, p.xz * 0.2).r + 4.0;
 }
 
 void intersectGround(inout Intersection intersection, inout Ray ray) {
@@ -246,7 +249,7 @@ void intersectGround(inout Intersection intersection, inout Ray ray) {
 	float distance = 0.0;
 	vec3 p = ray.origin;
 
-	for (float i = 0.0; i < 30.0; i++) {
+	for (float i = 0.0; i < 60.0; i++) {
 		d = sdGround(p);
 		distance += d;
 		p = ray.origin + distance * ray.direction;
@@ -406,7 +409,7 @@ void main(void) {
 			var mouse = new THREE.Vector2( 0.5, 0.5 );
 			var canvas;
 			var stats;
-			var textureCube;
+			var textureCube, texture2Ds;
 
 			var clock = new THREE.Clock();
 
@@ -467,6 +470,21 @@ void main(void) {
 				return textureCube;
 			}
 
+			function initTexture2D() {
+				var loader = new THREE.TextureLoader();
+				texture2Ds = {};
+
+				var createRepeatTexture = function(url) {
+					var texture = loader.load(url);
+					texture.wrapS = THREE.RepeatWrapping;
+					texture.wrapT = THREE.RepeatWrapping;
+					return texture;
+				}
+
+				texture2Ds.groundHeight	= createRepeatTexture("textures/kaneta/RandomNoiseTexture5_DISP.png");
+				texture2Ds.groundNormal	= createRepeatTexture("textures/kaneta/RandomNoiseTexture5_NRM.png");
+			}
+
 			function init() {
 
 				scene = new THREE.Scene();
@@ -476,6 +494,8 @@ void main(void) {
 
 				var cubeTextureLoader = new THREE.CubeTextureLoader();
 				textureCube = createTextureCube( cubeTextureLoader, "textures/cube/ely_cloudtop/", "jpg" );
+
+				initTexture2D();
 
 				geometry = new THREE.PlaneBufferGeometry( 2.0, 2.0 );
 				material = new THREE.RawShaderMaterial( {
@@ -489,6 +509,8 @@ void main(void) {
 
 						kadoScale: {type: 'f', value: config.kadoScale},
 						textureCube: {type: 'tc', value: textureCube},
+						groundHeight: {type: 't', value: texture2Ds.groundHeight},
+						groundNormal: {type: 't', value: texture2Ds.groundNormal},
 					},
 					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
 					fragmentShader: document.getElementById( 'fragment_shader' ).textContent
