--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -361,7 +361,7 @@ void main(void) {
 	camera.zoom = 2.0;
 	Ray ray = cameraShootRay(camera, uv);
 
-	kadoScale = 2.0 + cos(time * 0.1);
+	kadoScale = 2.6 + 0.1 * cos(time * 0.1);
 
 	vec3 color = vec3(0.0);
 	float reflection = 1.0;
