--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -428,8 +428,8 @@ float pNoise(vec2 p){
 
 void main(void) {
 	vec2 uv = gl_FragCoord.xy / resolution;
-	vec3 color = vec3(pNoise(gl_FragCoord.xy));
-	//vec3 color = vec3(rand(uv));
+	//vec3 color = vec3(pNoise(gl_FragCoord.xy));
+	vec3 color = vec3(texture2D(random, uv * 2.0).r);
 	gl_FragColor = vec4(color, 1.0);
 }
 </script>
@@ -445,6 +445,7 @@ void main(void) {
 <script src="js/controls/OrbitControls.js"></script>
 <script src="js/libs/stats.min.js"></script>
 <script src="js/libs/dat.gui.min.js"></script>
+<script src="js/libs/perlin.js"></script>
 
 <script>
 var camera, orbitControls, renderer;
@@ -557,6 +558,37 @@ function createRandomDataTexture(width, height) {
 	return texture;
 }
 
+function createPerlinNoiseDataTexture(width, height) {
+	var data = new Float32Array(width * height * 4);
+
+	for (var y = 0; y < height; y++) {
+		for (var x = 0; x < width; x++) {
+			var k = (y * width + x) * 4;
+			data[k]	     = Math.abs(noise.perlin2(x / width, y / height));
+			data[k + 1]  = 0.0;
+			data[k + 2]  = 0.0;
+			data[k + 3]  = 1.0;
+		}
+	}
+
+	var texture = new THREE.DataTexture(
+		data,
+		width,
+		height,
+		THREE.RGBAFormat,
+		THREE.FloatType,
+		THREE.UVMapping,
+		THREE.RepeatWrapping,
+		THREE.RepeatWrapping,
+		THREE.LinearFilter,
+		THREE.LinearFilter,
+	);
+
+	texture.needsUpdate = true;
+
+	return texture;
+}
+
 function createRenderTarget(width, height) {
 	return new THREE.WebGLRenderTarget(width, height, {
 		wrapS: THREE.RepeatWrapping,
@@ -571,7 +603,7 @@ function createRenderTarget(width, height) {
 }
 
 function createPerlinNoiseTexture(renderer, camera, width, height) {
-	var randomTexture	= createRandomDataTexture(width, height);
+	var randomTexture	= createPerlinNoiseDataTexture(width, height);
 	var output = createRenderTarget(width, height);
 	var scene = createQuadScene({
 		uniforms: {
