--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -65,7 +65,7 @@ uniform vec2 resolution;
 
 uniform samplerCube textureCube;
 uniform sampler2D groundHeight;
-uniform sampler2D groundNormal;
+//uniform sampler2D groundNormal;
 
 uniform bool debugCamera;
 uniform vec3 cameraPos;
@@ -241,7 +241,7 @@ vec3 hsv2rgb(vec3 c) {
 #define calcNormal(p, dFunc) normalize(vec2(EPS_N, -EPS_N).xyy * dFunc(p + vec2(EPS_N, -EPS_N).xyy) + vec2(EPS_N, -EPS_N).yyx * dFunc(p + vec2(EPS_N, -EPS_N).yyx ) + vec2(EPS_N, -EPS_N).yxy * dFunc(p + vec2(EPS_N, -EPS_N).yxy) + vec2(EPS_N, -EPS_N).xxx * dFunc(p + vec2(EPS_N, -EPS_N).xxx))
 
 float sdGround(in vec3 p) {
-    return p.y - 0.3 * texture2D(groundHeight, p.xz * 0.2).r + 4.0;
+    return p.y - 0.3 * texture2D(groundHeight, p.xz * 0.1).r + 4.0;
 }
 
 void intersectGround(inout Intersection intersection, inout Ray ray) {
@@ -381,55 +381,15 @@ void main(void) {
 }
 </script>
 
-<script id="perlin_noise_fragment_shader" type="x-shader/x-vertex">
+<script id="ground_fragment_shader" type="x-shader/x-vertex">
 precision highp float;
 uniform vec2 resolution;
 uniform sampler2D random;
-const float PI = 3.14159265359;
-
-float rand(vec2 p) {
-	return texture2D(random, p / resolution).r;
-}
-
-float rand_(vec2 c){
-	return fract(sin(dot(c.xy ,vec2(12.9898,78.233))) * 43758.5453);
-}
-
-float noise(vec2 p, float freq){
-	float unit = resolution.x / freq;
-	vec2 ij = floor(p/unit);
-	vec2 xy = mod(p,unit)/unit;
-	//xy = 3.*xy*xy-2.*xy*xy*xy;
-	xy = .5*(1.-cos(PI*xy));
-	float a = rand((ij+vec2(0.,0.)));
-	float b = rand((ij+vec2(1.,0.)));
-	float c = rand((ij+vec2(0.,1.)));
-	float d = rand((ij+vec2(1.,1.)));
-	float x1 = mix(a, b, xy.x);
-	float x2 = mix(c, d, xy.x);
-	return mix(x1, x2, xy.y);
-}
-
-float pNoise(vec2 p){
-	float persistance = .5;
-	float n = 0.;
-	float normK = 0.;
-	float f = 4.;
-	float amp = 1.;
-	for (int i = 0; i<50; i++){
-		n+=amp*noise(p, f);
-		f*=2.;
-		normK+=amp;
-		amp*=persistance;
-	}
-	float nf = n/normK;
-	return nf*nf*nf*nf;
-}
 
 void main(void) {
 	vec2 uv = gl_FragCoord.xy / resolution;
-	//vec3 color = vec3(pNoise(gl_FragCoord.xy));
-	vec3 color = vec3(texture2D(random, uv * 2.0).r);
+	float a = texture2D(random, uv).r;
+	vec3 color = vec3(pow(a, 2.0));
 	gl_FragColor = vec4(color, 1.0);
 }
 </script>
@@ -445,7 +405,7 @@ void main(void) {
 <script src="js/controls/OrbitControls.js"></script>
 <script src="js/libs/stats.min.js"></script>
 <script src="js/libs/dat.gui.min.js"></script>
-<script src="js/libs/perlin.js"></script>
+<script src="js/common/noise.js"></script>
 
 <script>
 var camera, orbitControls, renderer;
@@ -558,13 +518,15 @@ function createRandomDataTexture(width, height) {
 	return texture;
 }
 
-function createPerlinNoiseDataTexture(width, height) {
+function createPerlinNoiseTexture(width, height) {
 	var data = new Float32Array(width * height * 4);
+	var repeat = 4;
+	var perlin = new Perlin(repeat);
 
-	for (var y = 0; y < height; y++) {
-		for (var x = 0; x < width; x++) {
+	for (var y = 0.0; y < height; y++) {
+		for (var x = 0.0; x < width; x++) {
 			var k = (y * width + x) * 4;
-			data[k]	     = Math.abs(noise.perlin2(x / width, y / height));
+			data[k]	= perlin.OctavePerlin(x / width * repeat, y / width * repeat, 0.0, 6, 0.5);
 			data[k + 1]  = 0.0;
 			data[k + 2]  = 0.0;
 			data[k + 3]  = 1.0;
@@ -593,8 +555,8 @@ function createRenderTarget(width, height) {
 	return new THREE.WebGLRenderTarget(width, height, {
 		wrapS: THREE.RepeatWrapping,
 		wrapT: THREE.RepeatWrapping,
-		minFilter: THREE.NearestFilter,
-		magFilter: THREE.NearestFilter,
+		minFilter: THREE.LinearFilter,
+		magFilter: THREE.LinearFilter,
 		format: THREE.RGBAFormat,
 		type: THREE.FloatType,
 		stencilBuffer: false,
@@ -602,8 +564,8 @@ function createRenderTarget(width, height) {
 	});
 }
 
-function createPerlinNoiseTexture(renderer, camera, width, height) {
-	var randomTexture	= createPerlinNoiseDataTexture(width, height);
+function createGroundHeightTexture(renderer, camera, width, height) {
+	var randomTexture	= createPerlinNoiseTexture(width, height);
 	var output = createRenderTarget(width, height);
 	var scene = createQuadScene({
 		uniforms: {
@@ -611,9 +573,10 @@ function createPerlinNoiseTexture(renderer, camera, width, height) {
 			random: {type: 't', value: randomTexture},
 		},
 		vertexShader: document.getElementById('vertex_shader').textContent,
-		fragmentShader: document.getElementById('perlin_noise_fragment_shader').textContent
+		fragmentShader: document.getElementById('ground_fragment_shader').textContent
 	});
 	renderer.render(scene.scene, camera/*, output*/);
+	renderer.render(scene.scene, camera, output);
 	return output;
 }
 
@@ -633,14 +596,19 @@ function initTexture2D() {
 }
 
 function init() {
-	var cubeTextureLoader = new THREE.CubeTextureLoader();
-	textureCube = createTextureCube(cubeTextureLoader, "textures/cube/ely_cloudtop/", "jpg");
-
-	initTexture2D();
+	renderer = new THREE.WebGLRenderer();
+	renderer.setPixelRatio(config.pixelRatio);
+	renderer.setSize(config.resolution * config.aspectRatio, config.resolution);
 
 	camera = new THREE.PerspectiveCamera(35, 800/600);
 	camera.position.z = 12;
 	camera.lookAt(new THREE.Vector3(0.0, 0.0, 0.0));
+
+	var cubeTextureLoader = new THREE.CubeTextureLoader();
+	textureCube = createTextureCube(cubeTextureLoader, "textures/cube/ely_cloudtop/", "jpg");
+
+	texture2Ds = {};
+	texture2Ds.groundHeight = createGroundHeightTexture(renderer, camera, 256, 256);
 
 	mainScene = createQuadScene({
 		uniforms: {
@@ -654,15 +622,11 @@ function init() {
 			kadoScale: {type: 'f', value: config.kadoScale},
 			textureCube: {type: 'tc', value: textureCube},
 			groundHeight: {type: 't', value: texture2Ds.groundHeight},
-			groundNormal: {type: 't', value: texture2Ds.groundNormal},
+			//groundNormal: {type: 't', value: texture2Ds.groundNormal},
 		},
 		vertexShader: document.getElementById('vertex_shader').textContent,
 		fragmentShader: document.getElementById('fragment_shader').textContent
 	});
-
-	renderer = new THREE.WebGLRenderer();
-	renderer.setPixelRatio(config.pixelRatio);
-	renderer.setSize(config.resolution * config.aspectRatio, config.resolution);
 
 	if (!renderer.extensions.get("EXT_shader_texture_lod")) {
 		alert("EXT_shader_texture_lod is not supported.");
@@ -713,8 +677,6 @@ function init() {
 
 	stats = new Stats();
 	document.body.appendChild(stats.domElement);
-
-	createPerlinNoiseTexture(renderer, camera, canvas.width, canvas.height);
 }
 
 function animate(timestamp) {
@@ -757,7 +719,7 @@ function render(needsUpdate) {
 	mainScene.material.uniforms.time.value = config.time;
 
 	if (needsUpdate) {
-		//renderer.render(mainScene.scene, camera);
+		renderer.render(mainScene.scene, camera);
 	}
 
 	if (false) {
